--- a/shaikGPT/k8's/postgres.yaml
+++ b/shaikGPT/k8's/postgres.yaml
@@ -24,6 +24,12 @@ spec:
           value: shaikgpt
         ports:
         - containerPort: 5432
+        volumeMounts:
+        - name: postgres-data
+          mountPath: /var/lib/postgresql/data
+      volumes:
+      - name: postgres-data
+        emptyDir: {}  # For local testing; data is ephemeral
 ---
 apiVersion: v1
 kind: Service
@@ -34,3 +40,5 @@ spec:
     app: postgres
   ports:
   - port: 5432
+    targetPort: 5432
+  type: ClusterIP
