--- a/shaikGPT/k8's/secrets.yaml
+++ b/shaikGPT/k8's/secrets.yaml
@@ -4,5 +4,5 @@ metadata:
   name: shaikgpt-secrets
 type: Opaque
 stringData:
-  OPENAI_API_KEY: "YOUR_API_KEY"
+  OPENAI_API_KEY: "YOUR_API_KEY"  # Replace with your actual OpenAI key
   DATABASE_URL: "postgresql://shaik:shaik@postgres:5432/shaikgpt"
