--- a/shaikGPT/k8's/ingress.yaml
+++ b/shaikGPT/k8's/ingress.yaml
@@ -2,6 +2,8 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: shaikgpt-ingress
+  annotations:
+    kubernetes.io/ingress.class: "nginx"  # required if using NGINX Ingress Controller
 spec:
   rules:
   - host: shaikgpt.local
