--- a/shaikGPT1/k8's/frontend-deployment.yaml
+++ b/shaikGPT1/k8's/frontend-deployment.yaml
@@ -29,4 +29,5 @@ spec:
   ports:
   - port: 3000
     targetPort: 3000
-  type: NodePort   # allows access from browser via Minikube/Docker Desktop
+  type: ClusterIP   # allows access from browser via Minikube/Docker Desktop
+
