--- a/shaikGPT1/k8's/.env
+++ b/shaikGPT1/k8's/.env
@@ -1,2 +1,2 @@
-OPENAI_API_KEY= "xxxxxxxxxxxxxxxx"  # Replace with your actual OpenAI key
-DATABASE_URL= "postgresql://shaik:shaik@postgres:5432/shaikgpt"
+# OPENAI_API_KEY= "xxxxxxxxxxxxxxxx"  # Replace with your actual OpenAI key
+# DATABASE_URL= "postgresql://shaik:shaik@postgres:5432/shaikgpt"
